src/main/resources/Grammar.txt
ArithmExpr                  ::= ArithmExprTerm ( {'+' | '-'} ArithmExprTerm )*
ArithmExprTerm              ::= ArithmExprFactor ( {'*' | '/'} ArithmExprFactor )*
ArithmExprFactor            ::= IDENT
                            |   NumericValue
                            |   '-' ArithmExprFactor
                            |   '(' ArithmExpr ')'

BoolExpr                    ::= BoolExprTerm (OR BoolExprTerm)*
BoolExprTerm                ::= BoolExprFactor (AND BoolExprFactor)*
BoolExprFactor              ::= BoolConst BoolRHS?
                            |   NOT BoolExprFactor BoolRHS?
                            |   ArithmExpr RHS

RHS                         ::= BoolRHS | DateRHS | StringRHS | ArithmRHS | IN '(' ConstList ')' //SELECT with 1 column

ArithmRHS                   ::= '<'  ArithmExpr
                            |   '<=' ArithmExpr
                            |   '>'  ArithmExpr
                            |   '>=' ArithmExpr
                            |   '='  ArithmExpr
                            |   '!=' ArithmExpr
                            |   NOT? BETWEEN ArithmExpr AND ArithmExpr         // ARITHMETIC ONLY

//TODO пересекаются first(DateRHS) и first(ArithmRHS), в записке такого быть не должно
//TODO привести названия токенов-констант к одному виду
DateRHS                     ::= '<'  DateTimeConst
                            |   '<=' DateTimeConst
                            |   '>'  DateTimeConst
                            |   '>=' DateTimeConst
                            |   '='  DateTimeConst
                            |   '!=' DateTimeConst
                            |   NOT? BETWEEN DateTimeConst AND DateTimeConst

BoolRHS                     ::= IS NOT? BoolConst

DateTimeConst               ::= DateValue'::'DATE
                            |   TimeValue'::'TIME
                            |   TimestampValue'::'TIMESTAMP

StringRHS                   ::= LIKE CharacterValue

ConstList                   ::= Const (',' Const)* //Const should be of one type

//TODO first(StringConst) пересекается с first(DateTimeConst)
Const                       ::= NumberConst | StringConst | BoolConst | DateTimeConst

BoolConst                   ::= TRUE | FALSE | NULL
